--- a/public/css/profile.scss
+++ b/public/css/profile.scss
@@ -8,7 +8,7 @@
   @media (max-width: $break-large) {
     width: 100%;
     padding: 0px;
-    margin: 100px 0px;
+    margin: 100px 0px 0px 0px;
   }
 }
 
